results/SpecGenBench/2-shot/log-RepeatedChar-2023_11_06_03_33_52.txt
import java.util.HashSet;

class RepeatedChar {
    //@ ensures (\exists int i; 0 <= i && i < s.length(); s.charAt(i) == \result) && (\forall int i, j; 0 <= i && i < j && j < s.length(); s.charAt(i) != s.charAt(j)) ==> \result != ' ';
    //@ ensures (\forall int i; 0 <= i && i < s.length(); s.charAt(i) != \result) ==> \result == ' ';
    public char repeatedCharacter(String s) {
        Set<Character> seen = new HashSet<Character>();
        
        for (int i = 0; i < s.length(); i++) {
            char ch = s.charAt(i);
            if (!seen.add(ch)) {
                return ch;
            }
        }
        // impossible
        return ' ';
    }
}
/home/max/Documents/JMLGPT/tmp/RepeatedChar.java:7: error: cannot find symbol
        Set<Character> seen = new HashSet<Character>();
        ^
  symbol:   class Set
  location: class RepeatedChar
1 error

